fix logs products roles graphql